[metadata]
name = proxy
version = 1.0.0
url = https://flask.palletsprojects.com/tutorial/
license = MIT
maintainer = AUSSDA
maintainer_email = daniel.melichar@univie.ac.at
description = A small Dataverse proxy.
long_description = file: README.md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    lxml
    requests

[options.data_files]
/proxy/assets =
	assets/mandatory_defaults.json
	assets/optional_defaults.json
	assets/recommended_defaults.json

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    app
